[package]
name = "caching-client"
version = "0.1.0"
authors = ["Stuart Hinson <stuart.hinson@gmail.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
hyper = "0.11"
reqwest = "0.8"
rocksdb = "0.10"
serde = "1.0"
serde_cbor = "0.8"
serde_derive = "1.0"
slog = "2.2"